# gitPractice

./: .gitignore  CMakeLists.txt  README.md  pico_extras_import_optional.cmake
pico_client/: CMakeLists.txt  README.md
pico_client/include/: communication.h  lcd.h  mqtt.h  secrets.h  tcp_communication.h  wifi.h
pico_client/scripts/: build.sh  run_tests.sh
pico_client/src/: communication.c  lcd.c  main.c  mqtt.c  tcp_communication.c  wifi.c
pico_client/tests/: CMakeLists.txt  tests.cpp
scripts/: run_tests.sh
tempApp/: CMakeLists.txt  README.md
tempApp/include/: test_lib.h
tempApp/src/: test_lib.c
tempApp/tests/: CMakeLists.txt  tests.cc
viewer/: README.md  viewer.py
viewer/static/: style.css
viewer/templates/: index.html
